2009-01-29  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	  Add results.

	* src/bmltest_process.c:
	  Set a min tracks if needed. Fix setting voice params. Don't call work with 0
	  length.

	* tests/testmachine.sh:
	  Small parsing and output fix.
	  

2009-01-27  Stefan Kost  <ensonic@users.sf.net>

	* TODO:
	* src/bmltest_info.c:
	* src/bmltest_process.c:
	* tests/testmachine.sh:
	  Extend the machine test script to actually generate or process audio.

2009-01-13  Stefan Kost  <ensonic@users.sf.net>

	* README:
	* TODO:
	  More tips.

	* dllwrapper/wine/module.c:
	  Do incasesensitive search to avoid reloading libraries. Add more
	  details to log.

	* dllwrapper/wine/win32.c:
	  Add missing \n. Make returned id's increment.

2008-12-31  Stefan Kost  <ensonic@users.sf.net>

	* src/Makefile.am:
	  Seems its better to use PTHREAD_CFLAGS for all targets.

2008-12-30  Stefan Kost  <ensonic@users.sf.net>

	* m4/acx_pthread.m4:
	  Add PTHREAD_* variabled to be shown at the end of ./configure --help. Merge
	  change from avahi to check for shared lib behaviour (do we need -lpthread).	  

2008-12-30  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* autogen.sh:
	* configure.ac:
	* m4/acx_pthread.m4:
	* src/BuzzMachineLoader/Makefile.am:
	* src/Makefile.am:
	* m4 (added):
	* m4/acx_pthread.m4 (added):
	  Detect pthreads.

2008-12-27  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Use more automake features.

	* src/Makefile.am:
	  No need to override build order.

2008-12-26  Stefan Kost  <ensonic@users.sf.net>

	* configure.ac:
	  Run 'autoupdate' on configure.ac.

2008-12-13  Stefan Kost  <ensonic@users.sf.net>

	* dllwrapper/wine/module.c:
	* dllwrapper/wine/resource.c:
	  Comment out more traceing.

	* libbml.pc.in:
	  Don't add lib specific include dir.

2008-12-04  Stefan Kost  <ensonic@users.sf.net>

	* Makefile.am:
	* configure.ac:
	* src/Makefile.am:
	  Only build & link dllwrapper on x86.

	* src/BuzzMachineLoader/dsplib.h: